FLY-2103 design completed

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -25,12 +25,7 @@
     <div class="header-sec col-12 row m-0"  *ngIf="(channnelConguired && channnelConguired.length)">
         <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
         <div class="col-4 p-0 title-header">{{"credentials.manage_credentials" | translate}}</div>
-         <div class="col-8 right-sec p-0">            
-                <!-- <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">
-                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search" [(ngModel)]="searchcredential">
-                </div>
-                <div class="seach-block"  (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img  *ngIf="showSearch" src="assets/images/close.svg" >Search
-                </div> -->
+         <div class="col-8 right-sec p-0">                           
                 <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
                     <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" (focusout)="focusoutSearch();" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
@@ -48,12 +43,12 @@
     <perfect-scrollbar class="scroll-table" >
         <div class="table-data" *ngIf="(channnelConguired && channnelConguired.length) ">
             <div class="table-header row m-0" >
-                <div class="col-3 title">{{"credentials.credential_name" | translate}}</div>
-                <div class="col-3 title">{{"credentials.credential_ussge" | translate}}</div>
+                <div class="col-2 title">{{"credentials.credential_name" | translate}}</div>
+                <div class="col-3 title">CHANNELS</div>                
+                <div class="col-3 title">API SCOPES</div>
                 <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
-                <div class="col-3 title">{{"credentials.last_updated_by" | translate}}</div>
             </div>
-            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
+            <div class="table-body-content row m-0 align-items-center d-none" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
                 <!-- (click)="viewDetails()" -->
                 <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
@@ -66,6 +61,55 @@
                     </span>
                 </div>
             </div>
+
+
+            <div class="table-body-content row m-0 align-items-center">                
+                <div class="col-2 title">Banking Bot</div>
+                <div class="col-3 title">--</div>
+                <div class="col-3 title api-scope-data">
+                    <div class="name-scope text-truncate">Ingest Structure</div>
+                    <!-- [container]="'body'" -->
+                    <div class="kr-sg-dropdowns" ngbDropdown [placement]="'right-top'">                                        
+                        <div class="dropdown dropdown-open">
+                            <button class="dropdown-toggle dropdown-input" ngbDropdownToggle>+3</button>                                            
+                            <ul class="dropdown-menu content-menu api-scopes-manage-credentials-dropdown p-0" ngbDropdownMenu>                                
+                                <div class="api-scope-dropdown-content">
+                                    <div class="header-sec-dropdown">
+                                        <div class="title_header">API SCOPES</div>
+                                        <div class="close-dropdowm">
+                                            <img src="assets/icons/modal-close.svg">
+                                        </div>
+                                    </div> 
+                                    <perfect-scrollbar class="scroll-data">
+                                        <div class="data-scroll">
+                                            <div class="scope-sec-title">
+                                                <div class="scope-name">Get Structured Data</div>
+                                                <div class="scope-desc">Assign this scope to get the list of documents or individual documents using Document ID.</div>
+                                            </div>
+                                            <div class="scope-sec-title">
+                                                <div class="scope-name">Live search Results</div>
+                                                <div class="scope-desc">Assign this scope to get the live search results as the user is typing the query.</div>
+                                            </div>
+                                            <div class="scope-sec-title">
+                                                <div class="scope-name">Search Results</div>
+                                                <div class="scope-desc">Assign this scope to get the search results as the user has submitted the search query.</div>
+                                            </div>
+                                            <div class="scope-sec-title">
+                                                <div class="scope-name">Train</div>
+                                                <div class="scope-desc">Assign this scope to index the data stored in SearchAssist.</div>
+                                            </div>
+                                        </div>
+                                    </perfect-scrollbar>   
+                                </div>                                        
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 title text-truncate pr-5">
+                    <span class="last-updates">11/08/2020 - 07:07pm <span>by Melissa Hedderman</span></span>
+                    <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                </div>
+            </div>
         </div>
     </perfect-scrollbar>   
 
@@ -73,43 +117,99 @@
         <div class="modal-header">
             <span> {{"credentials.add_credential" | translate}}</span>
             <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
-        </div>        
-        <div class="modal-body">
-            <div class="kr-sg-input-text mb-4">
-                <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
-                <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
-            </div>
-            <div class="kr-sg-checkbox d-none">
-                <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
-                <label for="checkbox_1" class="checkbox-custom-label">{{"credentials.allow_anonymous_users_to_chat_with_the_bot" | translate}}</label>
-            </div>
-            <div class="kr-sg-checkbox  d-none">
-                <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
-                <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
-            </div>
-
-            <hr class="mt-4 mb-4">                
-
-            <div class="kr-sg-dropdowns">
-                <div class="label-text mb-2">{{"credentials.jwt_algorithm" | translate}} </div>
-                <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
-                    <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" > {{credntial.awt}}</button>                                            
-                        <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
-                            <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
-                            <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
-                        </ul>
+        </div>
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#configuration">Configuration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#APIscopes">API Scopes</a>
+            </li>           
+        </ul> 
+        <perfect-scrollbar class="perfect-scroll-modal-body">
+            <div class="modal-body">
+                <div class="tab-content">
+                    <div id="configuration" class="container tab-pane active p-0">
+                        <div class="kr-sg-input-text mb-4">
+                            <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
+                            <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
+                        </div>
+                        <div class="group-checkbox mb-4">    
+                            <div class="kr-sg-checkbox d-block">
+                                <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
+                                <label for="checkbox_1" class="checkbox-custom-label">{{"credentials.allow_anonymous_users_to_chat_with_the_bot" | translate}}</label>
+                            </div>
+                            <div class="kr-sg-checkbox d-block">
+                                <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
+                                <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
+                            </div>
+                        </div>
+                       
+                        <div class="kr-sg-dropdowns mb-4" ngbDropdown [placement]="'bottom'">   
+                            <div class="label-text">{{"credentials.jwt_algorithm" | translate}} </div>                                     
+                            <div class="dropdown dropdown-open">
+                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle> {{credntial.awt}}</button>                                            
+                                <ul class="dropdown-menu content-menu" ngbDropdownMenu>
+                                    <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
+                                    <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
+                                </ul>
+                            </div>
+                        </div>
+            
+                        <div class="switch-toggle">                
+                            <label class="kr-sg-toggle">
+                                <input type="checkbox" [(ngModel)]="credntial.enabled">
+                                <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
+                            </label>
+                        </div>     
+                        <div class="client-input-box-container">
+                            <div class="data-sec mb-4">
+                                <div class="label-text">Client ID</div>
+                                <div class="input-box-content d-flex align-items-center">
+                                    <div class="kr-sg-input-text mr-3">                                       
+                                        <input readonly type="text" placeholder="cs-506d9889-749f-5a68-a100-5b3c5e42da35" class="input-text">                                        
+                                    </div>
+                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
+                                </div>                                
+                            </div>   
+                            <div class="data-sec">
+                                <div class="label-text">Client Secret ID</div>
+                                <div class="input-box-content d-flex align-items-center">
+                                    <div class="kr-sg-input-text mr-3">                                       
+                                        <input readonly type="text" placeholder="cs-506d9889-749f-5a68-a100-5b3c5e42da35" class="input-text">                                        
+                                    </div>
+                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
+                                </div>                               
+                            </div>                          
+                        </div>                   
                     </div>
+                    <div id="APIscopes" class="container tab-pane fade p-0">
+                        <ng-container>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Ingest Structured Data</div>
+                                    <div class="secondary-text">Assign this scope to store the structured data in SearchAssist.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Ingest Structured Data</div>
+                                    <div class="secondary-text">Assign this scope to store the structured data in SearchAssist.</div>
+                                </div>
+                            </div>
+                        </ng-container>                        
+                    </div>                   
                 </div>
-            </div> 
-
-            <div class="switch-toggle mt-4 d-none">                
-                <label class="kr-sg-toggle">
-                    <input type="checkbox" [(ngModel)]="credntial.enabled">
-                    <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
-                </label>
-            </div>        
-        </div>        
+            </div>
+        </perfect-scrollbar>          
         <div class="modal-footer">
             <button class="kr-sg-button-primary btn_lg" (click)="validateSource()">{{"credentials.add" | translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">{{"credentials.cancel" | translate}}</button>
@@ -119,8 +219,8 @@
 
 
     <kr-modal modalType="center" #editCredential modalClass="modal_popups_ add-credentials-popup">
-        <div class="modal-header">
-            <span> {{"credentials.edit_credential" | translate}}</span>
+        <div class="modal-header">            
+            <h4 class="modal-title">{{"credentials.edit_credential" | translate}}</h4>
             <div class="close_icon" (click)="closeEditModalPopup()"><img src="assets/icons/modal-close.svg"></div>
         </div>        
         <div class="modal-body">
@@ -136,14 +236,13 @@
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
-            <hr class="mt-4 mb-4">
-    
+
             <div class="kr-sg-dropdowns">
                 <div class="label-text mb-2">{{"credentials.jwt_algorithm" | translate}} </div>
                 <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" > {{credntial.awt}}</button>                                            
-                        <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
+                        <ul class="dropdown-menu content-menu" ngbDropdownMenu>
                             <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
                             <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
                         </ul>
