--- a/findly-builder/src/app/components/actions/actions.component.scss
+++ b/findly-builder/src/app/components/actions/actions.component.scss
@@ -32,6 +32,12 @@
     }
     .actions-body-data{
         padding: 0;
+        .label-text{
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 17px;
+            color: #202124;
+        }
         .group-radiobutton{
             &.no-linked{               
                 pointer-events: none;   
@@ -68,9 +74,9 @@
             }
             .heading-title{
                 font-weight: 500;
-                font-size: 16px;
-                line-height: 19px;
-                margin-bottom: 10px;
+                font-size: 14px;
+                line-height: 17px;
+                margin-bottom: 5px;
             }
             .info-desc{
                 font-weight: normal;
@@ -114,13 +120,146 @@
             }
         }
         .preview-bolock{
-            margin: 30px 0;
+            margin: 10px 0;
+            padding-left: 30px;
             .preview-heading{
-                color: #000000;
                 font-weight: 500;
-                font-size: 16px;
-                line-height: 19px;
-                margin-bottom: 15px;
+                font-size: 14px;
+                line-height: 17px;
+                color: #000000;
+                margin-bottom: 10px;
+            }
+        }
+        .dropdown-actions-preview{
+            display: flex;
+            align-items: center;
+            .choose-template{
+                width: 290px;
+            }
+            .preview-template{
+                width: auto;
+                margin-left: 10px;
+                &.show {
+                    .dropdown-open {
+                        .dropdown-input{
+                            background: #EFF0F1
+                        }
+                    }
+                }
+                .dropdown-open {
+                    .dropdown-input{
+                        width: 34px;
+                        height: 34px;
+                        padding: 0;
+                        border-radius: 4px;
+                        border: 0;   
+                        text-align: center;  
+                        &:hover{
+                            background: #EFF0F1
+                        }                   
+                        &::before{
+                            display: none;
+                        }
+                    }
+                }
+                .content-menu{
+                    background: #FFFFFF;
+                    box-shadow: 0px 4px 8px rgba(32, 33, 36, 0.15);
+                    border: 0px;
+                    margin: 0px;
+                    padding: 0px;
+                    margin-left: 12px;                    
+                    &::before{
+                        content: "";
+                        position: absolute;
+                        width: 16px;
+                        height: 16px;
+                        background: #fff;
+                        top: 0;
+                        left: -8px;
+                        top: calc(50% - 10px);
+                        transform: rotate(45deg);
+                        box-shadow: -3px 3px 4px rgba(32, 33, 36, 0.06);
+                    }
+                    .preview-actions-dropdown-preview{
+                        .grid-view-preview{
+                            display: flex;
+                            flex-wrap: wrap;
+                            width: 400px;
+                            padding: 10px;
+                            .grid_item{
+                                width: 190px;
+                                padding: 5px;
+                                .inner-data-grid{
+                                    background: #F3F8FF;
+                                    border: 1px solid #E7F1FF;
+                                    border-radius: 4px;
+                                    padding: 9px;
+                                    font-weight: 500;
+                                    font-size: 12px;
+                                    line-height: 19px;
+                                    color: #07377E;
+                                    letter-spacing: 0.257143px;
+                                }
+                            }
+                        }
+                        .carousel-preview{
+                            width: 400px;
+                            padding: 10px;
+                            display: flex;
+                            .carousel_item{
+                                width: 190px;
+                                padding: 5px;
+                                &.inactive-carousel{
+                                    .carousel-title{
+                                        background: #FFFFFF;
+                                        opacity: 0.8;
+                                    }
+                                }
+                                .carousel-title{
+                                    background: #F3F8FF;
+                                    border: 1px solid #E7F1FF;
+                                    border-radius: 4px;
+                                    padding: 9px;
+                                    font-weight: 500;
+                                    font-size: 12px;
+                                    line-height: 19px;
+                                    color: #07377E;
+                                    letter-spacing: 0.257143px;
+                                }
+                            }
+                            .control-carousel{
+                                position: absolute;
+                                right: 7px;
+                                top: 24px;
+                                cursor: pointer;
+                                width: 30px;
+                                height: 20px;
+                                background: #3C4043;
+                                border-radius: 2px;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
+                        }
+                        .list-view-preview{
+                            width: 377px;
+                            padding: 5px 15px;
+                            .list_view_title{
+                                background: #F3F8FF;
+                                border: 1px solid #E7F1FF;
+                                border-radius: 4px;
+                                padding: 9px;
+                                color: #07377F;
+                                letter-spacing: 0.257143px;
+                                font-weight: 500;
+                                font-size: 12px;
+                                margin: 10px 0;
+                                line-height: 19px;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
