--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3334,3 +3334,19 @@ app-useronboarding-journey{
         }
     }
 }
+
+.tooltip-global-{    
+    opacity: 1 !important;
+    .tooltip-inner{
+        background: #202124;
+        box-shadow: 0px -4px 4px rgba(32, 33, 36, 0.2);
+        border-radius: 4px;
+        text-align: center;
+        padding: 10px 15px;
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 14px;
+        color: #fff;
+        border: 0;
+    }
+}
